objects/enway__Blink_Demo__c.object
<CustomObject>
    <fields>
        <fullName>enway__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blink Demos</relationshipLabel>
        <relationshipName>Blink_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enway__Blink_Demo_Number_Field__c</fullName>
        <label>Blink Demo Number Field</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enway__Blink_Demo_Required_String_Field__c</fullName>
        <label>Blink Demo Required String Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Blink Demos</relationshipLabel>
        <relationshipName>Blink_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enway__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Blink Demos</relationshipLabel>
        <relationshipName>Blink_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enway__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Blink Demos</relationshipLabel>
        <relationshipName>Blink_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Blink Demo</label>
    <nameField>
        <label>Blink Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blink Demos</pluralLabel>
    <recordTypes>
        <fullName>enway__Blink_Record_Type_Demo</fullName>
        <active>true</active>
        <label>Blink Record Type Demo</label>
    </recordTypes>
    <recordTypes>
        <fullName>enway__Blink_Record_Type_Demo_2</fullName>
        <active>true</active>
        <label>Blink Record Type Demo 2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>